[gd_scene load_steps=5 format=3 uid="uid://dqk8v3r4xj8yp"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_pausemenu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay"]
bg_color = Color(0, 0, 0, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.15, 0.2, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.6, 0.6, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0, 0.4, 0.4, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.6, 0.6, 0.6)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pausemenu")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -250.0
offset_right = 225.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Spacer0" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "RESUME GAME"

[node name="SaveButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "SAVE GAME"

[node name="LoadButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "LOAD GAME"

[node name="SettingsButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "SETTINGS"

[node name="QuitMenuButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "QUIT TO MENU"

[node name="QuitDesktopButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "QUIT TO DESKTOP"

[node name="Spacer2" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = " "
horizontal_alignment = 1
vertical_alignment = 1

